- Version 0.6.1:
  - Better units support in pptx shapes: '2inch' or '3cm'.
  - An option to change the view of a pptx document.
  - Fix: borderStyle does not work because of a typo.
  - More fonts support.
  - Some packages updates.
- Version 0.6.0:
  - Option to change the pptx master slide layout (right now only one master slides supported).
  - Add 'indentFirstLine' attribute for paragraph, 'indent' attribute for tables (Merge pull request #302).
  - Add some docx features (Merge pull request #301).
  - Some packages updates.
- Version 0.5.2:
  - Added a missing configuration option to the layout controls support in PowerPoint slides.
- Version 0.5.1:
  - Allow using layout controls in PowerPoint slides using the ph option of addText.
- Version 0.5.0:
  - Microsoft Word Document new features:
	- addText now have 2 new options: superscript and subscript (fixed issue #299).
  - Microsoft PowerPoint Document new features:
    - Custom layouts support.
    - Allow to insert direct xml code to a slide.
	- Allow using theme's colors in a slide object.
	- Documented how to change the theme.
	- More customizations to the slide's size (see the documentation).
  - Redesign the lib directory structure.
  - Some packages updates.
- Version 0.4.8:
  - Upgraded jszip to the last version.
  - Some packages updates.
  - xmlbuilder 11.0.1 migration.
  - Start cleaning the documentation.
  - Remove missing sourcemap url (Merge pull request #295 from pdesantis/master).
  - Update docxtable.js.
- Version 0.4.7:
  - Merge pull request #278 from aug2uag/master.
  - Merge pull request #255 from OmniCyberSecurity/master.
  - Merge pull request #262 from bkylerussell/indent.
  - Small fixed for the README.md.
  - Updated the supported node.js versions.
  - Merge pull request #270 from markau/markau-docxJSON-fixes.
  - Fix to example JSON key name, Fix to lib to ensure createListOfNumber.
  - Merge pull request #266 from pdesantis/master.