@@ -865,6 +865,16 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
               '<a:buFont typeface="+mj-lt"/><a:buAutoNum type="arabicPeriod"/>'
           } else if (pData[j].options.listType === 'dot') {
             moreStyles += '<a:buChar char="•"/>'
+          } else {
+            if (pData[j].options.listType) {
+              moreStyles +=
+                '<a:buFont typeface="' + pData[j].options.listType + '"/>'
+            } // Endif.
+
+            if (pData[j].options.listTypeChar) {
+              moreStyles +=
+                '<a:buChar typeface="' + pData[j].options.listTypeChar + '"/>'
+            } // Endif.
           } // Endif.
         } // Endif.
 
@@ -1163,7 +1173,22 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
 
       bodyProperties += ' rtlCol="0">'
 
-      if (objOptions.bodyProp.autoFit !== false) {
+      if (objOptions.bodyProp.noAutofit) {
+        bodyProperties += '<a:noAutofit/>'
+      } else if (
+        objOptions.bodyProp.normAutofit &&
+        objOptions.bodyProp.normAutofitRed
+      ) {
+        bodyProperties +=
+          '<a:normAutofit fontScale="' +
+          objOptions.bodyProp.normAutofit +
+          '" lnSpcReduction="' +
+          objOptions.bodyProp.normAutofitRed +
+          '"/>'
+      } else if (objOptions.bodyProp.normAutofit) {
+        bodyProperties +=
+          '<a:normAutofit fontScale="' + objOptions.bodyProp.normAutofit + '"/>'
+      } else if (objOptions.bodyProp.autoFit !== false) {
         bodyProperties += '<a:spAutoFit/>'
       } // Endif.
 
@@ -1250,6 +1275,10 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
       var y = 0
       var cx = 2819400
       var cy = 369332
+      var xDef = true
+      var yDef = true
+      var cyDef = true
+      var cxDef = true
 
       var moreStyles = ''
       var moreStylesAttr = ''
@@ -1260,6 +1289,7 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
 
       if (objs_list[i].options) {
         if (typeof objs_list[i].options.cx !== 'undefined') {
+          cxDef = false
           if (objs_list[i].options.cx) {
             cx = parseSmartNumber(
               objs_list[i].options.cx,
@@ -1274,6 +1304,7 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
         } // Endif.
 
         if (typeof objs_list[i].options.cy !== 'undefined') {
+          cyDef = false
           if (objs_list[i].options.cy) {
             cy = parseSmartNumber(
               objs_list[i].options.cy,
@@ -1288,6 +1319,7 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
         } // Endif.
 
         if (objs_list[i].options.x) {
+          xDef = false
           x = parseSmartNumber(
             objs_list[i].options.x,
             gen_private.type.pptx.pptWidth,
@@ -1298,6 +1330,7 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
         } // Endif.
 
         if (objs_list[i].options.y) {
+          yDef = false
           y = parseSmartNumber(
             objs_list[i].options.y,
             gen_private.type.pptx.pptHeight,
@@ -1409,50 +1442,100 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
               objs_list[i].options.ph +
               '"' +
               extraPhAttr +
-              '/></p:nvPr>'
+              (objs_list[i].options.nvPrAttrCode || '') +
+              '/>' +
+              (objs_list[i].options.nvPrCode || '') +
+              '</p:nvPr>'
+          } // Endif.
+
+          var codeCNvPrAttr = ''
+          if (objs_list[i].options.id) {
+            codeCNvPrAttr += ' id="' + objs_list[i].options.id + '"'
+          } else {
+            codeCNvPrAttr += ' id="' + (i + 2) + '"'
+          } // Endif.
+
+          if (objs_list[i].options.name) {
+            codeCNvPrAttr += ' name="' + objs_list[i].options.name + '"'
+          } else {
+            codeCNvPrAttr += ' name="Object ' + (i + 2) + '"'
+          } // Endif.
+
+          if (objs_list[i].options.title) {
+            codeCNvPrAttr += ' title="' + objs_list[i].options.title + '"'
+          } // Endif.
+
+          if (objs_list[i].options.desc) {
+            codeCNvPrAttr += ' descr="' + objs_list[i].options.desc + '"'
+          } // Endif.
+
+          if (objs_list[i].options.hidden) {
+            codeCNvPrAttr += ' hidden="1"'
           } // Endif.
 
           if (objs_list[i].type === 'cxn') {
             outString += '<p:cxnSp><p:nvCxnSpPr>'
             outString +=
-              '<p:cNvPr id="' +
-              (i + 2) +
-              '" name="Object ' +
-              (i + 1) +
-              '"/>' +
-              pNvPr +
-              '</p:nvCxnSpPr>'
+              '<p:cNvPr' + codeCNvPrAttr + '/>' + pNvPr + '</p:nvCxnSpPr>'
           } else {
             outString += '<p:sp><p:nvSpPr>'
             outString +=
-              '<p:cNvPr id="' +
-              (i + 2) +
-              '" name="Object ' +
-              (i + 1) +
-              '"/><p:cNvSpPr txBox="1"/>' +
+              '<p:cNvPr' +
+              codeCNvPrAttr +
+              '/><p:cNvSpPr txBox="1"/>' +
               pNvPr +
               '</p:nvSpPr>'
           } // Endif.
 
-          if (objs_list[i].options.ph) {
-            outString += '<p:spPr/>'
+          var bwMode = objs_list[i].options.bwMode
+            ? ' bwMode="' + objs_list[i].options.bwMode + '"'
+            : ''
+
+          if (
+            objs_list[i].options.ph &&
+            xDef &&
+            yDef &&
+            cxDef &&
+            cyDef &&
+            !locationAttr
+          ) {
+            outString += '<p:spPr' + bwMode + '/>'
           } else {
-            outString += '<p:spPr>'
+            outString += '<p:spPr' + bwMode + '>'
 
             outString += '<a:xfrm' + locationAttr + '>'
 
-            outString +=
-              '<a:off x="' +
-              x +
-              '" y="' +
-              y +
-              '"/><a:ext cx="' +
-              cx +
-              '" cy="' +
-              cy +
-              '"/></a:xfrm><a:prstGeom prst="' +
-              shapeType.name +
-              '">'
+            if (!objs_list[i].options.ph || !yDef || !xDef) {
+              outString += '<a:off'
+
+              if (!objs_list[i].options.ph || !xDef) {
+                outString += ' x="' + x + '"'
+              } // Endif.
+
+              if (!objs_list[i].options.ph || !yDef) {
+                outString += ' y="' + y + '"'
+              } // Endif.
+
+              outString += '/>'
+            } // Endif.
+
+            if (!objs_list[i].options.ph || !cyDef || !cxDef) {
+              outString += '<a:ext'
+
+              if (!objs_list[i].options.ph || !cxDef) {
+                outString += ' cx="' + cx + '"'
+              } // Endif.
+
+              if (!objs_list[i].options.ph || !cyDef) {
+                outString += ' cy="' + cy + '"'
+              } // Endif.
+
+              outString += '/>'
+            } // Endif.
+
+            outString += '</a:xfrm>'
+
+            outString += '<a:prstGeom prst="' + shapeType.name + '">'
 
             // string changed to take into account change of shape that you do by moving the little yellow dot
 
